fixed issue related to images positioned absolute, which cause overflow

--- a/Client/app/styles/base.less
+++ b/Client/app/styles/base.less
@@ -3,7 +3,6 @@
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
-	overflow-x: hidden;
 }
 
 .visually-hidden {
